fix: 🐛 add alignment to textWrapper and inputsContainer; include className in TextInput for styling

--- a/app/components/02-molecules/text-inputs-group/text-inputs-group.module.css
+++ b/app/components/02-molecules/text-inputs-group/text-inputs-group.module.css
@@ -5,12 +5,14 @@
 }
 
 .textWrapper {
+	align-items: flex-start;
 	display: flex;
 	flex-direction: column;
 	gap: var(--base-spacing);
 }
 
 .inputsContainer {
+	align-items: flex-start;
 	display: flex;
 	flex-direction: column;
 	gap: calc(var(--base-spacing) * 4);
@@ -18,4 +20,8 @@
 
 .callout {
 	margin-block-start: var(--base-spacing);
+}
+
+.textInput {
+	inline-size: min(30rem, 100%);
 }
